--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,81 +12,10 @@ env:
   PYTHON_VERSION: '3.12'
 
 jobs:
-  test:
-    name: Test & Quality Check
-    runs-on: ubuntu-latest
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ env.PYTHON_VERSION }}
-        
-    - name: Cache pip dependencies
-      uses: actions/cache@v3
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
-          
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install flake8 black isort mypy
-        
-    - name: Code formatting check (Black)
-      run: black --check --diff .
-      
-    - name: Import sorting check (isort)
-      run: isort --check-only --diff .
-      
-    - name: Lint with flake8
-      run: |
-        # Stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # Exit-zero treats all errors as warnings
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=88 --statistics
-        
-    - name: Type checking with mypy
-      run: mypy . --ignore-missing-imports --no-strict-optional
-      continue-on-error: true
-      
-    - name: Test configuration loading
-      run: |
-        cp configuration.env.template configuration.env
-        sed -i 's/your_discord_bot_token_here/dummy_token_for_testing/' configuration.env
-        python -c "from configuration import BOT_TOKEN, TIMEZONE; print('Config loaded successfully')"
-        
-    - name: Test database operations
-      run: |
-        python -c "
-        from database import database
-        database.connect()
-        database.create_table()
-        print('Database operations successful')
-        database.close()
-        "
-        
-    - name: Security scan with bandit
-      run: |
-        pip install bandit
-        bandit -r . -f json -o bandit-report.json || true
-        
-    - name: Upload security scan results
-      uses: actions/upload-artifact@v4
-      with:
-        name: security-scan-results
-        path: bandit-report.json
         
   build-docker:
     name: Build Docker Image
     runs-on: ubuntu-latest
-    needs: test
     if: github.event_name == 'push' || github.event_name == 'release'
     
     steps:
@@ -130,7 +59,7 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    needs: [test, build-docker]
+    needs: [build-docker]
     if: github.event_name == 'release'
     environment: production
     
@@ -147,7 +76,7 @@ jobs:
   notify:
     name: Notify
     runs-on: ubuntu-latest
-    needs: [test, build-docker, deploy]
+    needs: [build-docker, deploy]
     if: always()
     
     steps:
